--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "google-maps-react": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "rebass": "^4.0.7",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
